3.2/anypoint-connector-devkit/documenting-mule-extensions.adoc
= Documenting Mule Extensions

Based on the http://download.oracle.com/javase/1.4.2/docs/tooldocs/javadoc/overview.html[Java Doclet standard] the new documentation generation facility allows the mix of Java code and XML. Along with several improvements, it is now possible to run a search across the documentation.

If the project was created using the provided Maven archetype there is no need for any additional configuration and the documentation can be generated by running the following at the root of the project:

----
Federicos-MacBook-Pro:myproject federico$ mvn javadoc:javadoc
----

This will generate documentation into the target/apidocs directory which you can view in your browser and publish on your website.

== Configuring Documentation Generation

In case the project does not contain the necessary configuration to generate the documentation, this is an example taken from the https://github.com/mulesoft/twilio-connector/[Twilio Cloud Connector] that demonstrates how to set up the `pom.xml` file:

[source]
----
<build>
         <plugins>
            ...
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <docletArtifact>
                        <groupId>org.mule.tools.devkit</groupId>
                        <artifactId>mule-devkit-doclet</artifactId>
                        <version>${mule.devkit.version}</version>
                    </docletArtifact>
                    <doclet>org.mule.devkit.doclet.Doclava</doclet>
                    <bootclasspath>${sun.boot.class.path}</bootclasspath>
                    <additionalparam>
                        -hdf project.artifactId "${project.artifactId}"
                        -hdf project.groupId "${project.groupId}"
                        -hdf project.version "${project.version}"
                        -hdf project.name "${project.name}"
			-hdf project.repo.name "${project.distributionManagement.repository.name}"
			-hdf project.repo.id "${project.distributionManagement.repository.id}"
			-hdf project.repo.url "${project.distributionManagement.repository.url}"
			-hdf project.snapshotRepo.name "${project.distributionManagement.snapshotRepository.name}"
			-hdf project.snapshotRepo.id "${project.distributionManagement.snapshotRepository.id}"
			-hdf project.snapshotRepo.url "${project.distributionManagement.snapshotRepository.url}"
                        -d ${project.build.directory}/apidocs
                        -htmldir ${basedir}/doc
                    </additionalparam>
                    <useStandardDocletOptions>false</useStandardDocletOptions>
                    <additionalJOption>-J-Xmx1024m</additionalJOption>
                </configuration>
            </plugin>
            ...
         </plugins>
      </build>
----
